split up the hierarchy mapping classes

--- a/src/Marten/Marten.csproj
+++ b/src/Marten/Marten.csproj
@@ -60,7 +60,8 @@
     <Compile Include="Schema\DocumentAliasAttribute.cs" />
     <Compile Include="Schema\GinIndexedAttribute.cs" />
     <Compile Include="Schema\Hierarchies\HierarchyArgument.cs" />
-    <Compile Include="Schema\Hierarchies\HierarchyClasses.cs" />
+    <Compile Include="Schema\Hierarchies\HierarchyMapping.cs" />
+    <Compile Include="Schema\Hierarchies\SubClassMapping.cs" />
     <Compile Include="Schema\HiLoSequenceAttribute.cs" />
     <Compile Include="Schema\IDocumentMapping.cs" />
     <Compile Include="Schema\IndexDefinition.cs" />
