--- a/src/Marten/Marten.csproj
+++ b/src/Marten/Marten.csproj
@@ -67,6 +67,7 @@
     <Compile Include="Schema\InvalidDocumentException.cs" />
     <Compile Include="Schema\IResolver.cs" />
     <Compile Include="Schema\MartenSchemaException.cs" />
+    <Compile Include="Schema\SubClassMapping.cs" />
     <Compile Include="Schema\UpsertFunction.cs" />
     <Compile Include="Services\BatchCommand.cs" />
     <Compile Include="Services\CommandRunner.cs" />
