--- a/src/Marten/Marten.csproj
+++ b/src/Marten/Marten.csproj
@@ -70,7 +70,13 @@
     <Compile Include="Schema\SubClassMapping.cs" />
     <Compile Include="Schema\UpsertFunction.cs" />
     <Compile Include="Services\BatchCommand.cs" />
-    <Compile Include="Services\Batching.cs" />
+    <Compile Include="Services\BatchQuerying\MultipleResultsReader.cs" />
+    <Compile Include="Services\BatchQuerying\DataReaderAdvancer.cs" />
+    <Compile Include="Services\BatchQuerying\IBatchedQuery.cs" />
+    <Compile Include="Services\BatchQuerying\IBatchLoadByKeys.cs" />
+    <Compile Include="Services\BatchQuerying\IDataReaderHandler.cs" />
+    <Compile Include="Services\BatchQuerying\IQueryForExpression.cs" />
+    <Compile Include="Services\BatchQuerying\SingleResultReader.cs" />
     <Compile Include="Services\CommandRunner.cs" />
     <Compile Include="Services\CommandRunnerExtensions.cs" />
     <Compile Include="Services\Diagnostics.cs" />
