--- a/src/Marten.Testing/Marten.Testing.csproj
+++ b/src/Marten.Testing/Marten.Testing.csproj
@@ -143,7 +143,8 @@
     <Compile Include="Schema\will_build_a_new_database_table_if_definition_changes_Tests.cs" />
     <Compile Include="Schema\will_name_nested_class_documents_appropriately.cs" />
     <Compile Include="searchable_properties_Tests.cs" />
-    <Compile Include="Services\BatchedSamples.cs" />
+    <Compile Include="Services\BatchedQuerying\BatchedSamples.cs" />
+    <Compile Include="Services\BatchedQuerying\batched_querying_acceptance_Tests.cs" />
     <Compile Include="Services\DirtyTrackingIdentityMapTests.cs" />
     <Compile Include="Services\IdentityMapTests.cs" />
     <Compile Include="Services\NulloIdentityMapTests.cs" />
