--- a/src/Marten/Marten.csproj
+++ b/src/Marten/Marten.csproj
@@ -52,6 +52,7 @@
     <Compile Include="LambdaConnectionFactory.cs" />
     <Compile Include="Linq\CollectionAnyContainmentWhereFragment.cs" />
     <Compile Include="Linq\ContainmentWhereFragment.cs" />
+    <Compile Include="Linq\FindMembers.cs" />
     <Compile Include="Linq\IMartenQueryable.cs" />
     <Compile Include="Linq\IMartenQueryProvider.cs" />
     <Compile Include="Linq\MartenQueryProvider.cs" />
@@ -69,6 +70,7 @@
     <Compile Include="Schema\MartenSchemaException.cs" />
     <Compile Include="Schema\SubClassMapping.cs" />
     <Compile Include="Schema\UpsertFunction.cs" />
+    <Compile Include="Schema\ModuloLateralJoinField.cs" />
     <Compile Include="Services\BatchCommand.cs" />
     <Compile Include="Services\BatchQuerying\AnyHandler.cs" />
     <Compile Include="Services\BatchQuerying\BatchedQuery.cs" />
