--- a/src/Marten/Marten.csproj
+++ b/src/Marten/Marten.csproj
@@ -72,6 +72,7 @@
     <Compile Include="Services\BatchCommand.cs" />
     <Compile Include="Services\BatchQuerying\AnyHandler.cs" />
     <Compile Include="Services\BatchQuerying\BatchedQuery.cs" />
+    <Compile Include="Services\BatchQuerying\BatchedQueryable.cs" />
     <Compile Include="Services\BatchQuerying\CountHandler.cs" />
     <Compile Include="Services\BatchQuerying\MultipleResultsReader.cs" />
     <Compile Include="Services\BatchQuerying\DataReaderAdvancer.cs" />
