--- a/src/Marten.Testing/Marten.Testing.csproj
+++ b/src/Marten.Testing/Marten.Testing.csproj
@@ -183,6 +183,7 @@
     <Compile Include="TrackingSession\document_session_update_existing_document_Tests.cs" />
     <Compile Include="TypeMappingsTests.cs" />
     <Compile Include="UnitOfWorkTests.cs" />
+    <Compile Include="UnitOfWork_PendingChanges_Functionality_Tests.cs" />
     <Compile Include="Util\CommandExtensionsTests.cs" />
     <Compile Include="Util\update_batch_Tests.cs" />
   </ItemGroup>
