--- a/src/Marten/Marten.csproj
+++ b/src/Marten/Marten.csproj
@@ -97,7 +97,7 @@
     <Compile Include="Events\ProjectionTiming.cs" />
     <Compile Include="Events\ProjectionType.cs" />
     <Compile Include="Events\ProjectionUsage.cs" />
-    <Compile Include="Events\StreamMapping.cs" />
+    <Compile Include="Events\AggregateConfiguration.cs" />
     <Compile Include="Generation\TableColumn.cs" />
     <Compile Include="Generation\TableDefinition.cs" />
     <Compile Include="Services\DirtyTrackingIdentityMap.cs" />
