--- a/src/Marten.Testing/Marten.Testing.csproj
+++ b/src/Marten.Testing/Marten.Testing.csproj
@@ -149,6 +149,7 @@
     <Compile Include="Services\BatchedQuerying\batched_querying_acceptance_Tests.cs" />
     <Compile Include="Services\DirtyTrackingIdentityMapTests.cs" />
     <Compile Include="Services\IdentityMapTests.cs" />
+    <Compile Include="Services\ManagedConnectionTests.cs" />
     <Compile Include="Services\NulloIdentityMapTests.cs" />
     <Compile Include="Services\TrackedEntityTests.cs" />
     <Compile Include="Session\document_session_find_json_async_Tests.cs" />
