commit/changeset tracking. Closes GH-163

--- a/src/Marten/Marten.csproj
+++ b/src/Marten/Marten.csproj
@@ -86,7 +86,9 @@
     <Compile Include="Services\BatchQuerying\IBatchLoadByKeys.cs" />
     <Compile Include="Services\BatchQuerying\IDataReaderHandler.cs" />
     <Compile Include="Services\BatchQuerying\SingleResultReader.cs" />
+    <Compile Include="Services\ChangeSet.cs" />
     <Compile Include="Services\CommandRunnerMode.cs" />
+    <Compile Include="Services\IChangeSet.cs" />
     <Compile Include="Services\IUnitOfWork.cs" />
     <Compile Include="Services\ManagedConnection.cs" />
     <Compile Include="Services\CommandRunnerExtensions.cs" />
@@ -159,7 +161,7 @@
     <Compile Include="Schema\StorageArgument.cs" />
     <Compile Include="Schema\UpsertArgument.cs" />
     <Compile Include="Services\NulloIdentityMap.cs" />
-    <Compile Include="Services\PendingDeletion.cs" />
+    <Compile Include="Services\Delete.cs" />
     <Compile Include="Services\TrackedEntity.cs" />
     <Compile Include="Services\TransactionState.cs" />
     <Compile Include="StoreOptions.cs" />
