table re-generation is now smart enough to add missing duplicated fields instead of rebuilding. Closes GH-128

--- a/src/Marten/Marten.csproj
+++ b/src/Marten/Marten.csproj
@@ -52,6 +52,7 @@
     <Compile Include="Events\EventStore.cs" />
     <Compile Include="Events\EventStoreAdmin.cs" />
     <Compile Include="Events\EventStream.cs" />
+    <Compile Include="Generation\TableDiff.cs" />
     <Compile Include="IDiagnostics.cs" />
     <Compile Include="IDocumentSessionListener.cs" />
     <Compile Include="IMartenLogger.cs" />
