--- a/src/Marten.Testing/Marten.Testing.csproj
+++ b/src/Marten.Testing/Marten.Testing.csproj
@@ -96,6 +96,7 @@
     <Compile Include="Fixtures\ResultSet.cs" />
     <Compile Include="Fixtures\Target.cs" />
     <Compile Include="Generation\TableDefinitionTests.cs" />
+    <Compile Include="Generation\TableDiffTests.cs" />
     <Compile Include="Github\Documents.cs" />
     <Compile Include="Github\GhRepository.cs" />
     <Compile Include="Github\GhUser.cs" />
@@ -147,6 +148,7 @@
     <Compile Include="Schema\Hierarchies\HierarchyArgumentTests.cs" />
     <Compile Include="Schema\IndexDefinitionTests.cs" />
     <Compile Include="Schema\Sequences\configuring_hilo_overrides_Tests.cs" />
+    <Compile Include="Schema\table_regeneration_with_new_searchable_fields_Tests.cs" />
     <Compile Include="Schema\when_deriving_the_table_definition_from_the_database_schema_Tests.cs" />
     <Compile Include="Schema\will_build_a_new_database_table_if_definition_changes_Tests.cs" />
     <Compile Include="Schema\will_name_nested_class_documents_appropriately.cs" />
