--- a/src/Marten.Testing/Marten.Testing.csproj
+++ b/src/Marten.Testing/Marten.Testing.csproj
@@ -133,6 +133,7 @@
     <Compile Include="Linq\query_with_any_within_child_collection_Tests.cs" />
     <Compile Include="Linq\query_beginning_with_constant_Tests.cs" />
     <Compile Include="Linq\query_with_float_Tests.cs" />
+    <Compile Include="Linq\query_with_is_one_of_Tests.cs" />
     <Compile Include="Linq\query_with_modulo_Tests.cs" />
     <Compile Include="Linq\query_with_enums_Tests.cs" />
     <Compile Include="Linq\query_with_nullable_types_Tests.cs" />
