--- a/src/Marten/Marten.csproj
+++ b/src/Marten/Marten.csproj
@@ -58,15 +58,22 @@
     <Compile Include="IDocumentSessionListener.cs" />
     <Compile Include="IMartenLogger.cs" />
     <Compile Include="LambdaConnectionFactory.cs" />
+    <Compile Include="LinqExtensions.cs" />
     <Compile Include="Linq\BadLinqExpressionException.cs" />
     <Compile Include="Linq\CollectionAnyContainmentWhereFragment.cs" />
     <Compile Include="Linq\ContainmentWhereFragment.cs" />
     <Compile Include="Linq\ExpressionExtensions.cs" />
     <Compile Include="Linq\FindMembers.cs" />
+    <Compile Include="Linq\Handlers\EnumerableContains.cs" />
+    <Compile Include="Linq\Handlers\IMethodCallParser.cs" />
+    <Compile Include="Linq\Handlers\MethodCallParser.cs" />
+    <Compile Include="Linq\Handlers\StringContains.cs" />
+    <Compile Include="Linq\Handlers\StringEndsWith.cs" />
+    <Compile Include="Linq\Handlers\StringStartsWith.cs" />
     <Compile Include="Linq\IMartenQueryable.cs" />
     <Compile Include="Linq\IMartenQueryProvider.cs" />
     <Compile Include="Linq\MartenQueryProvider.cs" />
-    <Compile Include="Linq\MethodHandlers.cs" />
+    <Compile Include="Linq\Handlers\IsOneOf.cs" />
     <Compile Include="Linq\WhereClauseVisitor.cs" />
     <Compile Include="QuerySession.cs" />
     <Compile Include="Schema\ColumnValue.cs" />
