--- a/src/Marten.Testing/Marten.Testing.csproj
+++ b/src/Marten.Testing/Marten.Testing.csproj
@@ -138,6 +138,7 @@
     <Compile Include="Linq\query_with_is_one_of_Tests.cs" />
     <Compile Include="Linq\query_with_modulo_Tests.cs" />
     <Compile Include="Linq\query_with_enums_Tests.cs" />
+    <Compile Include="Linq\query_with_nested_boolean_logic_Tests.cs" />
     <Compile Include="Linq\query_with_nullable_types_Tests.cs" />
     <Compile Include="Linq\using_containment_operator_in_linq_Tests.cs" />
     <Compile Include="Linq\using_custom_Linq_parser_plugins_Tests.cs" />
