--- a/src/Marten.Testing/Marten.Testing.csproj
+++ b/src/Marten.Testing/Marten.Testing.csproj
@@ -95,6 +95,7 @@
     <Compile Include="Examples\Searching_Within_Child_Collections.cs" />
     <Compile Include="Examples\SimpleSessionListener.cs" />
     <Compile Include="Examples\UnitOfWorkMechanics.cs" />
+    <Compile Include="Extras\project_document_Tests.cs" />
     <Compile Include="Fixtures\EventStore\EventStoreFixture.cs" />
     <Compile Include="Fixtures\EventStore\QuestEventFixture.cs" />
     <Compile Include="Fixtures\LinqFixture.cs" />
