--- a/src/Marten/Marten.csproj
+++ b/src/Marten/Marten.csproj
@@ -53,6 +53,9 @@
     <Compile Include="Events\EventStore.cs" />
     <Compile Include="Events\EventStoreAdmin.cs" />
     <Compile Include="Events\EventStream.cs" />
+    <Compile Include="Extras\Projection.cs" />
+    <Compile Include="Extras\ProjectionBuilder.cs" />
+    <Compile Include="Extras\QuerySessionExtensions.cs" />
     <Compile Include="Generation\TableDiff.cs" />
     <Compile Include="IDiagnostics.cs" />
     <Compile Include="IDocumentSessionListener.cs" />
