checkpoint: introduced the new ISelector<T> abstraction prior to Select() transforms

--- a/src/Marten/Marten.csproj
+++ b/src/Marten/Marten.csproj
@@ -72,6 +72,7 @@
     <Compile Include="Linq\Handlers\StringStartsWith.cs" />
     <Compile Include="Linq\IMartenQueryable.cs" />
     <Compile Include="Linq\IMartenQueryProvider.cs" />
+    <Compile Include="Linq\ISelector.cs" />
     <Compile Include="Linq\MartenQueryProvider.cs" />
     <Compile Include="Linq\Handlers\IsOneOf.cs" />
     <Compile Include="Linq\ScalarQueryExecution.cs" />
