--- a/src/Marten.Testing/Marten.Testing.csproj
+++ b/src/Marten.Testing/Marten.Testing.csproj
@@ -151,6 +151,7 @@
     <Compile Include="performance_tuning.cs" />
     <Compile Include="persisting_document_with_string_id_Tests.cs" />
     <Compile Include="QuerySessionTests.cs" />
+    <Compile Include="query_scalar_values_with_select_in_query_async.cs" />
     <Compile Include="Schema\auto_create_mode_Tests.cs" />
     <Compile Include="Schema\configuring_searchable_fields_Tests.cs" />
     <Compile Include="Schema\configuring_the_document_type_alias_Tests.cs" />
