--- a/src/Marten.Testing/Marten.Testing.csproj
+++ b/src/Marten.Testing/Marten.Testing.csproj
@@ -151,6 +151,19 @@
     <Compile Include="performance_tuning.cs" />
     <Compile Include="persisting_document_with_string_id_Tests.cs" />
     <Compile Include="QuerySessionTests.cs" />
+    <Compile Include="query_scalar_values_with_select_in_query_async.cs" />
+    <Compile Include="Schema\auto_create_mode_Tests.cs" />
+    <Compile Include="Schema\configuring_foreign_key_fields_Tests.cs" />
+    <Compile Include="Schema\configuring_searchable_fields_Tests.cs" />
+    <Compile Include="Schema\configuring_the_document_type_alias_Tests.cs" />
+    <Compile Include="Schema\do_not_overwrite_tables_with_searchable_fields_Tests.cs" />
+    <Compile Include="Schema\ForeignKeyDefinitionTests.cs" />
+    <Compile Include="Schema\Hierarchies\end_to_end_document_hierarchy_usage_Tests.cs" />
+    <Compile Include="Schema\Hierarchies\generating_code_and_sql_for_hierarchy_smoke_Tests.cs" />
+    <Compile Include="Schema\Hierarchies\HierarchyArgumentTests.cs" />
+    <Compile Include="Schema\IndexDefinitionTests.cs" />
+    <Compile Include="Schema\table_regeneration_with_new_searchable_fields_Tests.cs" />
+    <Compile Include="Schema\when_deriving_the_table_definition_from_the_database_schema_Tests.cs" />
     <Compile Include="Schema\will_build_a_new_database_table_if_definition_changes_Tests.cs" />
     <Compile Include="Schema\will_name_nested_class_documents_appropriately.cs" />
     <Compile Include="foreign_key_persisting_Tests.cs" />
