--- a/src/Marten/Marten.csproj
+++ b/src/Marten/Marten.csproj
@@ -66,10 +66,12 @@
     <Compile Include="Linq\FindMembers.cs" />
     <Compile Include="Linq\Handlers\EnumerableContains.cs" />
     <Compile Include="Linq\Handlers\IMethodCallParser.cs" />
+    <Compile Include="Linq\Handlers\StringComparisonParser.cs" />
     <Compile Include="Linq\Handlers\MethodCallParser.cs" />
-    <Compile Include="Linq\Handlers\StringContains.cs" />
+    <Compile Include="Linq\Handlers\StringEquals.cs" />
     <Compile Include="Linq\Handlers\StringEndsWith.cs" />
     <Compile Include="Linq\Handlers\StringStartsWith.cs" />
+    <Compile Include="Linq\Handlers\StringContains.cs" />
     <Compile Include="Linq\IMartenQueryable.cs" />
     <Compile Include="Linq\IMartenQueryProvider.cs" />
     <Compile Include="Linq\MartenQueryProvider.cs" />
