Select() transforms work within Batched Queries

--- a/src/Marten/Marten.csproj
+++ b/src/Marten/Marten.csproj
@@ -104,6 +104,7 @@
     <Compile Include="Services\BatchQuerying\BatchedQueryable.cs" />
     <Compile Include="Services\BatchQuerying\CountHandler.cs" />
     <Compile Include="Services\BatchQuerying\IBatchedFetcher.cs" />
+    <Compile Include="Services\BatchQuerying\IBatchedQueryable.cs" />
     <Compile Include="Services\BatchQuerying\MultipleResultsReader.cs" />
     <Compile Include="Services\BatchQuerying\DataReaderAdvancer.cs" />
     <Compile Include="Services\BatchQuerying\IBatchedQuery.cs" />
