--- a/src/Marten/Marten.csproj
+++ b/src/Marten/Marten.csproj
@@ -61,7 +61,11 @@
     <Compile Include="LinqExtensions.cs" />
     <Compile Include="Linq\BadLinqExpressionException.cs" />
     <Compile Include="Linq\CollectionAnyContainmentWhereFragment.cs" />
+    <Compile Include="Linq\CompiledQueryExtensions.cs" />
+    <Compile Include="Linq\CompiledQueryExecutor.cs" />
+    <Compile Include="Linq\CompiledQueryMemberExpressionVisitor.cs" />
     <Compile Include="Linq\ContainmentWhereFragment.cs" />
+    <Compile Include="Linq\DbParameterSetter.cs" />
     <Compile Include="Linq\DeserializeSelector.cs" />
     <Compile Include="Linq\ExpressionExtensions.cs" />
     <Compile Include="Linq\FindMembers.cs" />
@@ -74,17 +78,20 @@
     <Compile Include="Linq\Handlers\StringEndsWith.cs" />
     <Compile Include="Linq\Handlers\StringStartsWith.cs" />
     <Compile Include="Linq\Handlers\StringContains.cs" />
+    <Compile Include="Linq\ICompiledQuery.cs" />
     <Compile Include="Linq\IMartenQueryable.cs" />
     <Compile Include="Linq\IMartenQueryProvider.cs" />
     <Compile Include="Linq\ISelector.cs" />
     <Compile Include="Linq\MartenQueryProvider.cs" />
     <Compile Include="Linq\Handlers\IsOneOf.cs" />
     <Compile Include="Linq\QueryableExtensions.cs" />
+    <Compile Include="Linq\ScalarCommandBuilder.cs" />
+    <Compile Include="Linq\ScalarSelector.cs" />
     <Compile Include="Linq\QueryPlan.cs" />
-    <Compile Include="Linq\ScalarQueryExecution.cs" />
     <Compile Include="Linq\SelectorParser.cs" />
     <Compile Include="Linq\SelectTransformer.cs" />
     <Compile Include="Linq\SingleFieldSelector.cs" />
+    <Compile Include="Linq\StringSelector.cs" />
     <Compile Include="Linq\TargetObject.cs" />
     <Compile Include="Linq\WhereClauseVisitor.cs" />
     <Compile Include="Linq\WholeDocumentSelector.cs" />
