--- a/src/Marten/Marten.csproj
+++ b/src/Marten/Marten.csproj
@@ -68,6 +68,7 @@
     <Compile Include="Linq\Handlers\EnumerableContains.cs" />
     <Compile Include="Linq\Handlers\IMethodCallParser.cs" />
     <Compile Include="Linq\Handlers\StringComparisonParser.cs" />
+    <Compile Include="Linq\Handlers\IsInGenericEnumerable.cs" />
     <Compile Include="Linq\Handlers\MethodCallParser.cs" />
     <Compile Include="Linq\Handlers\StringEquals.cs" />
     <Compile Include="Linq\Handlers\StringEndsWith.cs" />
