--- a/src/Marten.Testing/Marten.Testing.csproj
+++ b/src/Marten.Testing/Marten.Testing.csproj
@@ -91,9 +91,11 @@
     <Compile Include="Examples\LinqExamples.cs" />
     <Compile Include="Examples\Load_by_Id.cs" />
     <Compile Include="Examples\MartenRegistryExamples.cs" />
+    <Compile Include="Examples\RecordingLogger.cs" />
     <Compile Include="Examples\SagaStorageExample.cs" />
     <Compile Include="Examples\Searching_Within_Child_Collections.cs" />
     <Compile Include="Examples\SimpleSessionListener.cs" />
+    <Compile Include="Examples\UnitOfWorkBlogSamples.cs" />
     <Compile Include="Examples\UnitOfWorkMechanics.cs" />
     <Compile Include="Fixtures\EventStore\EventStoreFixture.cs" />
     <Compile Include="Fixtures\EventStore\QuestEventFixture.cs" />
