Use foreign key relationships to order the document types in unit of work commits #206

--- a/src/Marten.Testing/Marten.Testing.csproj
+++ b/src/Marten.Testing/Marten.Testing.csproj
@@ -213,6 +213,7 @@
     <Compile Include="UnitOfWork_PendingChanges_Functionality_Tests.cs" />
     <Compile Include="Using_DocumentSessionListener_Tests.cs" />
     <Compile Include="Util\CommandExtensionsTests.cs" />
+    <Compile Include="Util\EnumerableExtensionsTests.cs" />
     <Compile Include="Util\update_batch_Tests.cs" />
   </ItemGroup>
   <ItemGroup>
