--- a/src/Marten/Marten.csproj
+++ b/src/Marten/Marten.csproj
@@ -79,6 +79,7 @@
     <Compile Include="Linq\ISelector.cs" />
     <Compile Include="Linq\MartenQueryProvider.cs" />
     <Compile Include="Linq\Handlers\IsOneOf.cs" />
+    <Compile Include="Linq\QueryableExtensions.cs" />
     <Compile Include="Linq\ScalarQueryExecution.cs" />
     <Compile Include="Linq\SelectorParser.cs" />
     <Compile Include="Linq\SingleFieldSelector.cs" />
