--- a/src/Marten.Testing/Marten.Testing.csproj
+++ b/src/Marten.Testing/Marten.Testing.csproj
@@ -182,6 +182,7 @@
     <Compile Include="Services\BatchedQuerying\batched_querying_acceptance_Tests.cs" />
     <Compile Include="Services\DirtyTrackingIdentityMapTests.cs" />
     <Compile Include="Services\IdentityMapTests.cs" />
+    <Compile Include="Services\Includes\end_to_end_query_with_include_Tests.cs" />
     <Compile Include="Services\Includes\IncludeSelectorTests.cs" />
     <Compile Include="Services\ManagedConnectionTests.cs" />
     <Compile Include="Services\NulloIdentityMapTests.cs" />
