cleaned up MartenQueryable json queries methods

--- a/src/Marten/Marten.csproj
+++ b/src/Marten/Marten.csproj
@@ -64,6 +64,7 @@
     <Compile Include="Linq\ContainmentWhereFragment.cs" />
     <Compile Include="Linq\DeserializeSelector.cs" />
     <Compile Include="Linq\ExpressionExtensions.cs" />
+    <Compile Include="Linq\FetchType.cs" />
     <Compile Include="Linq\FindMembers.cs" />
     <Compile Include="Linq\Handlers\EnumerableContains.cs" />
     <Compile Include="Linq\Handlers\IMethodCallParser.cs" />
