--- a/src/Marten.Testing/Marten.Testing.csproj
+++ b/src/Marten.Testing/Marten.Testing.csproj
@@ -169,6 +169,8 @@
     <Compile Include="Schema\configuring_foreign_key_fields_Tests.cs" />
     <Compile Include="Schema\configuring_searchable_fields_Tests.cs" />
     <Compile Include="Schema\configuring_the_document_type_alias_Tests.cs" />
+    <Compile Include="Schema\ContainerFactory.cs" />
+    <Compile Include="Schema\DatabaseSchema.cs" />
     <Compile Include="Schema\do_not_overwrite_tables_with_searchable_fields_Tests.cs" />
     <Compile Include="Schema\ForeignKeyDefinitionTests.cs" />
     <Compile Include="Schema\Hierarchies\end_to_end_document_hierarchy_usage_Tests.cs" />
