--- a/src/Marten/Marten.csproj
+++ b/src/Marten/Marten.csproj
@@ -105,6 +105,7 @@
     <Compile Include="Schema\Resolver.cs" />
     <Compile Include="Schema\Sequences\NoOpIdGeneration.cs" />
     <Compile Include="Schema\SubClassMapping.cs" />
+    <Compile Include="Schema\EnsureDatabaseSchema.cs" />
     <Compile Include="Schema\UpsertFunction.cs" />
     <Compile Include="Services\BatchCommand.cs" />
     <Compile Include="Services\BatchQuerying\AnyHandler.cs" />
