add CombGuid support (fixes #244)

--- a/src/Marten/Marten.csproj
+++ b/src/Marten/Marten.csproj
@@ -89,6 +89,7 @@
     <Compile Include="Linq\WholeDocumentSelector.cs" />
     <Compile Include="QuerySession.cs" />
     <Compile Include="Schema\ColumnValue.cs" />
+    <Compile Include="Schema\CombGuidIdGeneration.cs" />
     <Compile Include="Schema\DocumentAliasAttribute.cs" />
     <Compile Include="Schema\ForeignKeyAttribute.cs" />
     <Compile Include="Schema\ForeignKeyDefinition.cs" />
